// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Fab component when Natura dark theme is provided should render correctly 1`] = `
<button
  className="MuiButtonBase-root MuiFab-root NatDSFab-root-4 MuiFab-primary NatDSFab-primary-5"
  disabled={false}
  onBlur={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiFab-label"
  >
    F
  </span>
  <span
    className="MuiTouchRipple-root"
  />
</button>
`;

exports[`Fab component when Natura light theme is provided should render correctly 1`] = `
<button
  className="MuiButtonBase-root MuiFab-root NatDSFab-root-7 MuiFab-primary NatDSFab-primary-8"
  disabled={false}
  onBlur={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiFab-label"
  >
    F
  </span>
</button>
`;

exports[`Fab component when a color is specified should render color "light" correctly 1`] = `
<button
  className="MuiButtonBase-root MuiFab-root NatDSFab-root-1"
  disabled={false}
  onBlur={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiFab-label"
  >
    F
  </span>
  <span
    className="MuiTouchRipple-root"
  />
</button>
`;

exports[`Fab component when a color is specified should render color "primary" correctly 1`] = `
<button
  className="MuiButtonBase-root MuiFab-root NatDSFab-root-1 MuiFab-primary NatDSFab-primary-2"
  disabled={false}
  onBlur={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiFab-label"
  >
    F
  </span>
  <span
    className="MuiTouchRipple-root"
  />
</button>
`;

exports[`Fab component when a color is specified should render color "secondary" correctly 1`] = `
<button
  className="MuiButtonBase-root MuiFab-root NatDSFab-root-1 MuiFab-secondary NatDSFab-secondary-3"
  disabled={false}
  onBlur={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiFab-label"
  >
    F
  </span>
</button>
`;

exports[`Fab component when a size is specified should render size "large" correctly 1`] = `
<button
  className="MuiButtonBase-root MuiFab-root NatDSFab-root-1 MuiFab-primary NatDSFab-primary-2"
  disabled={false}
  onBlur={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiFab-label"
  >
    F
  </span>
</button>
`;

exports[`Fab component when a size is specified should render size "medium" correctly 1`] = `
<button
  className="MuiButtonBase-root MuiFab-root NatDSFab-root-1 MuiFab-sizeMedium MuiFab-primary NatDSFab-primary-2"
  disabled={false}
  onBlur={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiFab-label"
  >
    F
  </span>
  <span
    className="MuiTouchRipple-root"
  />
</button>
`;

exports[`Fab component when a size is specified should render size "small" correctly 1`] = `
<button
  className="MuiButtonBase-root MuiFab-root NatDSFab-root-1 MuiFab-sizeSmall MuiFab-primary NatDSFab-primary-2"
  disabled={false}
  onBlur={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiFab-label"
  >
    F
  </span>
</button>
`;

exports[`Fab component when a variant is specified should render variant "extended" correctly 1`] = `
<button
  className="MuiButtonBase-root MuiFab-root NatDSFab-root-1 MuiFab-extended MuiFab-primary NatDSFab-primary-2"
  disabled={false}
  onBlur={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiFab-label"
  >
    F
  </span>
</button>
`;

exports[`Fab component when a variant is specified should render variant "round" correctly 1`] = `
<button
  className="MuiButtonBase-root MuiFab-root NatDSFab-root-1 MuiFab-primary NatDSFab-primary-2"
  disabled={false}
  onBlur={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiFab-label"
  >
    F
  </span>
  <span
    className="MuiTouchRipple-root"
  />
</button>
`;

exports[`Fab component when disabled is explicitly false should render correctly 1`] = `
<button
  className="MuiButtonBase-root MuiFab-root NatDSFab-root-1 MuiFab-primary NatDSFab-primary-2"
  disabled={false}
  onBlur={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiFab-label"
  >
    F
  </span>
</button>
`;

exports[`Fab component when disabled is explicitly true should render correctly 1`] = `
<button
  className="MuiButtonBase-root MuiFab-root NatDSFab-root-1 Mui-disabled MuiFab-primary NatDSFab-primary-2 Mui-disabled"
  disabled={true}
  onBlur={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={-1}
  type="button"
>
  <span
    className="MuiFab-label"
  >
    F
  </span>
</button>
`;

exports[`Fab component when no props are provided should render correctly 1`] = `
<button
  className="MuiButtonBase-root MuiFab-root NatDSFab-root-1 MuiFab-primary NatDSFab-primary-2"
  disabled={false}
  onBlur={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiFab-label"
  >
    F
  </span>
</button>
`;
